<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/submenu1"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/submenu_title1">
        <menu>
            <item
                android:id="@+id/submenu_item1"
                android:title="@string/submenu_item1"/>
            <item
                android:id="@+id/submenu_item2"
                android:title="@string/submenu_item2"/>
            <item
                android:id="@+id/submenu_item3"
                android:title="@string/submenu_item3"/>
        </menu>
        </item>
    <item
        android:id="@+id/item1"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/item1"/>

    <item
        android:id="@+id/submenu2"
        android:title="@string/submenu_title2">
        <menu>
            <item
                android:id="@+id/submenu_item4"
                android:title="@string/submenu_item4"/>
            <item
                android:id="@+id/submenu_item5"
                android:title="@string/submenu_item5"/>
        </menu>
    </item>

</menu>